<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_user_circle"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_address_card"
            android:title= "@string/menu_contact" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_skills"
            android:title="@string/menu_skills" />
        <item
            android:id="@+id/nav_project"
            android:icon="@drawable/ic_project"
            android:title="@string/menu_project"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
