<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top"
        android:paddingStart="@dimen/paddingStart"
        android:paddingLeft="@dimen/paddingStart"
        android:paddingEnd="@dimen/paddingEnd"
        android:paddingRight="@dimen/paddingEnd">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjectTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subjectText"
            android:inputType="textEmailSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subjectDefaultString"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bodyTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/bodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bodyDefaultString"
            android:inputType="textCapSentences|textMultiLine" />

        <Button
            android:id="@+id/sendMailButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonText"
            android:textAllCaps="false"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>